# mvc_example

./: .gitignore  CMakeLists.txt  Makefile  applicationdata.hpp  design.txt  main.cpp  mymainwindow.cpp  mymainwindow.hpp  mymainwindow_test.cpp  mymainwindowimpl.hpp  myoptionswindow.cpp  myoptionswindow.hpp  myoptionswindowimpl.hpp  options.hpp  qtmymainwindow.cpp  qtmymainwindow.hpp  qtmyoptionswindow.cpp  qtmyoptionswindow.hpp  widgetutil.hpp
combined/: mymainwindow.cpp  myoptionswindow.cpp  myoptionswindow.hpp  qtmymainwindow.cpp  qtmymainwindow.hpp  qtmyoptionswindow.cpp  qtmyoptionswindow.hpp
combined/using_callbacks/: Makefile  mainwindow.cpp  mainwindow.hpp  mymainwindow.cpp  mymainwindow.hpp  mymainwindow_test.cpp  myoptionswindow.cpp  myoptionswindow.hpp  optionswindow.cpp  optionswindow.hpp  qtmymainwindow.cpp  qtmymainwindow.hpp  qtoptionswindow.cpp
combined/using_client/: mainwindow.cpp  mainwindow.hpp  mainwindow_test.cpp  mymainwindow.cpp  mymainwindow.hpp  mymainwindow_test.cpp  optionswindow.cpp  optionswindow.hpp  qtmainwindow.cpp  qtmainwindow.hpp  qtmymainwindow.cpp  qtmyoptionswindow.cpp  qtmyoptionswindow.hpp  qtoptionswindow.hpp
split/: Makefile  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow_test.cpp  mainwindowimpl.hpp  mymainwindow.cpp  mymainwindow_test.cpp  mymainwindowimpl.hpp  myoptionswindow.hpp  myoptionswindowimpl.hpp  optionswindow.cpp  optionswindow.hpp  optionswindowimpl.hpp  qtmainwindow.cpp  qtmainwindow.hpp  qtmymainwindow.cpp  qtoptionswindow.cpp  qtoptionswindow.hpp
